--- a/styles.css
+++ b/styles.css
@@ -30,16 +30,21 @@ body{
 }
 
 
-.btn:hover{
-    background-color: #63a4ff;   
-}
 .btn:active {
     box-shadow: 0 5px #666;
     transform: translateY(4px);
   }
 
+.btn:hover{
+    background-color: #98DE58;
+}
+
 .key:hover{
-    background-color: #ff8489;
+    background-color: #63a4ff;   
+}
+
+.operation:hover{
+    background-color: #f9d976;
 }
 
 .dispdiv{
